--- a/marketdemoWeb/WebContent/WEB-INF/web.xml
+++ b/marketdemoWeb/WebContent/WEB-INF/web.xml
@@ -12,7 +12,7 @@
   </servlet-mapping>
   <context-param>
   	<param-name>primefaces.THEME</param-name>
-  	<param-value>nova-colored</param-value>
+  	<param-value>luna-pink</param-value>
   </context-param>
   <context-param>
   	<param-name>primefaces.FONT_AWESOME</param-name>
